# yaweather

./: .travis.yml  pyproject.toml  readme.md  readme.template.md  requirements.txt  setup.py
.github/workflows/: pythonpublish.yml
examples/: forecasts.py  forecasts_async.py  simple.py  simple_async.py
scripts/: build_models.py  build_readme.py  build_responses_json.py  requirements.txt
tests/: test_models.py
tests/resources/: responses_Japan.json  responses_Russia.json  responses_UnitedKingdom.json
yaweather/: __init__.py  api.py  cities.py  main.py
yaweather/models/: __init__.py  base.py  fact.py  forecast.py  info.py  request.py  response.py
